--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,7 +8,7 @@
   <body>
     <div class="main-content">
       {{>header}}
-    
+    <p>This site is created by Mouhamadou Niang. It uses data from mapbox and weatherstack.com !</p>
      <img class="portrait"
       src="img/Quori_socially_interactive_robot_platform_IMG_20200219_165323219_02.jpg"
     />
